--- a/DDDSample.Web/Views/Shared/_Layout.cshtml
+++ b/DDDSample.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">DDDSample.Web</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Backend Test - Bruno Varandas Ribeiro</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -64,7 +64,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - DDDSample.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 01/12/2020 - BackendTest.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
